plugins {
    id 'java-library'
    id 'application'
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

evaluationDependsOn(':lib-json')
evaluationDependsOn(':api-data-store-server-java')

tasks.withType(JavaCompile) {
    options.compilerArgs << '-parameters'
}

repositories {
    ivy {
        ivyPattern "https://sissource.ethz.ch/openbis/openbis-public/openbis-ivy/-/raw/main/[organisation]/[module]/[revision]/ivy.xml"
        artifactPattern "https://sissource.ethz.ch/openbis/openbis-public/openbis-ivy/-/raw/main/[organisation]/[module]/[revision]/[artifact]-[revision](-[classifier]).[ext]"
    }
    mavenCentral()
}

dependencies {
    annotationProcessor("org.projectlombok:lombok:1.18.38")

    compileOnly("org.projectlombok:lombok:1.18.38")
    testCompileOnly("org.projectlombok:lombok:1.18.38")
    testAnnotationProcessor("org.projectlombok:lombok:1.18.38")

    api(project(":lib-json"))
    api(project(":api-data-store-server-java"))

    implementation("org.xerial:sqlite-jdbc:3.50.2.0")
    implementation('commons-cli:commons-cli:1.10.0')

    testImplementation("junit:junit:4.13.1")
    testImplementation("org.mockito:mockito-core:4.4.0")
}


tasks.named('jar', Jar) {
    manifest {
        attributes(
                'Implementation-Title':   'app-openbis-drive',
                'Implementation-Version': '0.0.1'
        )
    }
}

